Addition of meta description

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Carpus Act</title>
+		<title>Carpus Act : Video game playthroughs by @sonofted57</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name=”description” content=”Playthroughs / Lets Plays of video games by @sonofted57. Currently playing Sony Playstation PS3/PS4, Nintendo, Super Nintendo, Sega Genesis/Mega Drive. Checkout Carpus Act on YouTube”>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
