--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<h1><a href="index.html"><strong>Carpus Act</strong></a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon fa-info-circle"></a></li>
 							</ul>
 						</nav>
 					</header>
