Structure added for scripts

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Metal Gear Solid V Ground Zeroes S Rank</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://youtu.be/j9Qt4abf9vI?rel=0&autoplay=1" data-poptrox="youtube,854x480" class="image">
+								<img src="images/thumbs/01.jpg"
+										alt="MGSV Ground Zeroes Hard S-Rank Complete Stealth"/>
+							</a>
+								<h2>MGSV Ground Zeroes Hard S-Rank Complete Stealth</h2>
+								<p>Hard | S-Rank | Complete Stealth</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
