--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Carpus Act</strong></a></h1>
+						<h1><a href="index.html"><strong>carpusact.tv</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle"></a></li>
